software/stacks/sample-app/app/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: sample-app
  labels:
    app: vote
    hostk8s.app: sample-app
    hostk8s.component: vote-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
        hostk8s.app: sample-app
        hostk8s.component: vote-service
    spec:
      containers:
      - name: vote
        image: localhost:5000/hostk8s-vote:latest
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
