software/stacks/sample-app/app/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: sample-app
  labels:
    app: worker
    hostk8s.component: worker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        hostk8s.component: worker-service
    spec:
      containers:
      - name: worker
        image: localhost:5000/hostk8s-worker:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
