software/stacks/sample-app/app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: sample-app
  labels:
    app: db
    hostk8s.app: sample-app
    hostk8s.component: database
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  type: ClusterIP
