software/stacks/sample-app/app/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: sample-app
  labels:
    app: result
    hostk8s.app: sample-app
    hostk8s.component: result-service
spec:
  selector:
    app: result
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
