software/stacks/sample-app/app/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: sample-app
  labels:
    app: vote
    hostk8s.component: vote-service
spec:
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
