software/stacks/sample-app/app/vote.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: sample-app
  labels:
    app: vote
    hostk8s.component: vote-service
spec:
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: sample-app
  labels:
    app: vote
    hostk8s.component: vote-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
        hostk8s.component: vote-service
    spec:
      containers:
      - name: vote
        image: localhost:5000/hostk8s-vote:latest
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
