software/stacks/sample-app/app/voting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: sample-app
  labels:
    hostk8s.app: sample-app
    hostk8s.component: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "result"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /vote(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vote
            port:
              number: 80
      - path: /result(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: result
            port:
              number: 80
